css adjustment to butoon colours and margins for alignment, while loop to js for country and flag to be correct half the time

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,6 @@ header {
     width: 100%;
 }
 
-/* World flags image */
-.background-main {
-    margin-left: 40px;
-}
-
 /* Gaming area */
 
 .game-area {
@@ -61,7 +56,6 @@ img {
 #game-one,
 #game-two {
     width: 280px;
-    margin-left: 40px;
     text-align: center;
 }
 
@@ -82,14 +76,14 @@ button {
 .btn-outline-true {
     font-weight: bold;
     font-size: large;
-    color: white;
+    color: black;
     background-color: lightgreen;
 }
 
 .btn-outline-false {
     font-weight: bold;
     font-size: large;
-    color: white;
+    color: black;
     background-color: lightcoral;
 }
 
